BARC UAT/src/objects/Delivery_Challan_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>CGST_Amount__c</fullName>
        <formula>Kitting_Amount__c * ( CGST__c / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CGST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CGST__c</fullName>
        <formula>IF(Is_IGST__c == false, GST_Rate__c/2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CGST %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_Total_Value__c</fullName>
        <label>Copy Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Delivery_Challan__c</fullName>
        <label>Delivery Challan</label>
        <referenceTo>Delivery_Challan__c</referenceTo>
        <relationshipLabel>Delivery Challan Line Items</relationshipLabel>
        <relationshipName>Delivery_Challan_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GST_Rate__c</fullName>
        <label>GST Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IGST_Amount__c</fullName>
        <formula>Kitting_Amount__c * ( IGST__c / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGST__c</fullName>
        <formula>IF(Is_IGST__c == true,GST_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IGST %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_IGST__c</fullName>
        <formula>IF( Delivery_Challan__r.Packing_List__r.Bill_To_State__c == &apos;Maharashtra&apos;, false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is IGST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kitting_Amount__c</fullName>
        <label>Kitting Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Kitting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kitting</label>
        <referenceTo>Kitting__c</referenceTo>
        <relationshipLabel>Delivery Challan Line Items</relationshipLabel>
        <relationshipName>Delivery_Challan_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SGST_Amount__c</fullName>
        <formula>Kitting_Amount__c * (  SGST__c / 100 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGST Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SGST__c</fullName>
        <formula>IF(Is_IGST__c == false, GST_Rate__c/2, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SGST %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Kitting_Amount__c +  CGST_Amount__c +  IGST_Amount__c +  SGST_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Delivery Challan Line Item</label>
    <nameField>
        <displayFormat>DCL-{0}</displayFormat>
        <label>Delivery Challan Line Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Delivery Challan Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>